--- a/my-app-base/deployment.yaml
+++ b/my-app-base/deployment.yaml
@@ -17,6 +17,6 @@ spec:
       containers:
         - name: nginx
           imagePullPolicy: Always
-          image: denisbicakcic00/py-flask
+          image: denisbicakcic/py-flask
           ports:
             - containerPort: 80
