--- a/environments/staging/my-app/kustomization.yaml
+++ b/environments/staging/my-app/kustomization.yaml
@@ -4,7 +4,7 @@ replicas:
   - name: nginx-deployment
     count: 2
 images:
-  - name: denisbicakcic00/py-flask
+  - name: denisbicakcic/py-flask
     newTag: v0.1.0
 resources:
   - ../../../my-app-base
